--- a/A3/initial.css
+++ b/A3/initial.css
@@ -1,65 +1,42 @@
-/*index*/
-div.tab div.tab-content:not(.active){
-    display: none;
-}
-
-
-
-/*initial*/
-.btn-file {
-    position: relative;
-    overflow: hidden;
-}
-.btn-file input[type=file] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    font-size: 100px;
-    text-align: right;
-    filter: alpha(opacity=0);
-    opacity: 0;
-    outline: none;
-    background: white;
-    cursor: inherit;
-    display: block;
-}
-
-/* Style the vertical tab */
-.tabs{
+.main-container{
     margin-top:100px;
-    min-height: 100%;
 }
 
-ul.tab-menu {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
-    height: 100%;
+
+@media screen and (max-width: 400px) {
+
+    .nav-link {
+        padding: .3rem 0.6rem;
+    }
 }
-.tab-divider {
-    border: 1px solid #d5d8df;
+
+.nav-tabs {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    text-align: center;
+    min-height: 20px;
+    padding: 10px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
-ul.tab-menu li {
-    display: inline-block;
-    line-height: 45px;
-    width: 100%;
+
+.nav-tabs .nav-link{
+    color: #495057;
+    border-style: solid ;
+    border-bottom: thin;
 }
-ul.tab-menu li a {
-    color: #6a6a6a;
-    display: inline-block;
-    line-height: 45px;
-    padding: 0 20px;
-    width: 100%;
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
 }
-ul.tab-menu li a:hover, ul.tab-menu li.active a, ul.tab-menu li a:focus {
-    background: none repeat scroll 0 0 #d5d7de;
-    color: #6a6a6a;
-}
-ul.tab-menu li a i {
-    color: #6a6a6a;
-    font-size: 16px;
-    padding-right: 10px;
+
+.collapse-stuff{
+    text-align: justify;
 }
