--- a/A3/initial.css
+++ b/A3/initial.css
@@ -28,12 +28,12 @@ body {
 
 /*navbar stuff*/
 @media screen and (max-width: 400px) {
-    .nav-link {
+    .initial2 .nav-link {
         padding: .3rem 0.6rem;
     }
 }
 
-.nav-tabs {
+.initial2 {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     text-align: center;
@@ -47,13 +47,14 @@ body {
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
 
-.nav-tabs .nav-link{
+.initial2 .nav-link {
     color: #495057;
     border-style: solid ;
     border-bottom: thin;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.initial2 .nav-item.show .nav-link
+.initial2 .nav-link.active {
     color: #495057;
     background-color: #fff;
     border: 1px solid #e3e3e3;
