--- a/initial.css
+++ b/initial.css
@@ -2,15 +2,26 @@
     margin-top:100px;
 }
 
+body {
+    position: relative;
+}
 
+
+@media (min-width: 768px) {
+    .infoEvent {
+        top: 65px;
+    }
+}
+
+
+/*navbar stuff*/
 @media screen and (max-width: 400px) {
-
-    .nav-link {
+    .initial2 .nav-link {
         padding: .3rem 0.6rem;
     }
 }
 
-.nav-tabs {
+.initial2 {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     text-align: center;
@@ -24,13 +35,14 @@
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
 
-.nav-tabs .nav-link{
+.initial2 .nav-link {
     color: #495057;
     border-style: solid ;
     border-bottom: thin;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.initial2 .nav-item.show .nav-link
+.initial2 .nav-link.active {
     color: #495057;
     background-color: #fff;
     border: 1px solid #e3e3e3;
@@ -41,6 +53,45 @@
     text-align: justify;
 }
 
-div.tab div.tab-content:not(.active){
-    display: none;
+/* carousel stuff*/
+.carouselimg,
+.carousel-item {
+    height: 400px;
+}
+
+.carousel-item img {
+    max-height: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.modal-contentImgEvent{
+    background-color: transparent;
+    border: none;
+}
+
+@media screen and (max-width: 425px) {
+    .modal-dialogImgEvent {
+        margin:0;
+    }
+}
+
+/*img stuff*/
+
+.linkImg{
+    background:url(./imgs/lights.jpg) no-repeat center center fixed;
+    background-size: cover ;
+    height: 500px;
+    width:100%;
+    padding: 0rem 0rem;
+    padding-bottom: 1rem ;
+}
+.mainImg{
+    max-height: 400px;
+    width: auto;
+    height: auto;
 }
