eventPageOwner e eventPage done :dancer:

--- a/A3/initial.css
+++ b/A3/initial.css
@@ -95,3 +95,13 @@ body {
     width: auto;
     height: auto;
 }
+
+/*rating*/
+.star-rating {
+    line-height:32px;
+    font-size:1.25em;
+}
+
+.star-rating .fa-star{
+    color: yellow;
+}
