--- a/Motivação/lit.css
+++ b/Motivação/lit.css
@@ -152,3 +152,15 @@ figure-details {
   border-radius: 5px;
   background-color: transparent;
 }
+.map-responsive{
+    overflow:hidden;
+    position:relative;
+    height:0;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
