--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,57 +5,24 @@
   padding: 0;
 }
 
-input[type="text"] {
+input[type="text"], 
+input[type="email"], 
+input[type="password"],
+input[type="datetime-local"],
+textarea.form-control,
+select.custom-select {
   color: white;
   background-color: #444;
   border: 1px solid #444;
+  border-radius: 0px 5px 5px 0px;
 }
 
-input[type="text"]:focus {
-  color: white;
-  background-color: #303030;
-}
-
-input[type="datetime-local"] {
-  color: white;
-  background-color: #444;
-  border: 1px solid #444;
-}
-
-input[type="datetime-local"]:focus {
-  color: white;
-  background-color: #303030;
-}
-
-input[type="password"] {
-  color: white;
-  background-color: #444;
-  border: 1px solid #444;
-}
-
-input[type="password"]:focus {
-  color: white;
-  background-color: #303030;
-}
-
-textarea.form-control {
-  color: white;
-  background-color: #444;
-  border: 1px solid #444;
-}
-
-textarea.form-control:focus {
-  color: white;
-  background-color: #303030;
-}
-
-.custom-select {
-  color: white;
-  background-color: #444;
-  border: 1px solid #444;
-}
-
-.custom-select:focus {
+input[type="text"]:focus, 
+input[type="email"]:focus, 
+input[type="password"]:focus,
+input[type="datetime-local"]:focus,
+textarea.form-control:focus,
+select.custom-select:focus {
   color: white;
   background-color: #303030;
 }
