pagina de login e registo linda

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,6 +27,13 @@ select.custom-select:focus {
   background-color: #303030;
 }
 
+div#jumbotron_register {
+  max-width: 700px;
+}
+div#jumbotron_login{
+  max-width: 500px;
+}
+
 figure {
   display: block;
   height: 150px;
