--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,6 +27,11 @@ select.custom-select:focus {
   background-color: #303030;
 }
 
+#input_city, 
+#input_country {
+  border-radius:5px;
+}
+
 div#jumbotron_register {
   max-width: 700px;
 }
