--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,23 +32,60 @@
 input[type="text"], 
 input[type="email"], 
 input[type="password"],
+input[type="time"],
+input[type="date"],
 input[type="datetime-local"],
-textarea.form-control,
 select.custom-select {
   color: white;
   background-color: #444;
   border: 1px solid #444;
   border-radius: 0px 5px 5px 0px;
 }
+textarea.form-control{
+  color: white;
+  background-color: #444;
+  border: 1px solid #444;
+  border-radius: 5px 5px 5px 5px;
+}
 
 input[type="text"]:focus, 
 input[type="email"]:focus, 
 input[type="password"]:focus,
+input[type="time"]:focus,
+input[type="date"]:focus,
 input[type="datetime-local"]:focus,
 textarea.form-control:focus,
 select.custom-select:focus {
   color: white;
   background-color: #303030;
+}
+
+select#type.custom-select, 
+select#category.custom-select, 
+#event_data input[type="text"], 
+#event_data input[type="email"], 
+#event_data input[type="time"], 
+#event_data input[type="date"],
+#event_data select.custom-select,
+#user_info_container input[type="text"], 
+#user_info_container input[type="email"], 
+#user_info_container select.custom-select 
+{
+  border-radius: 5px 5px 5px 5px;
+}
+@media(max-width:991px){
+  #container_user{
+    text-align: center;
+  }
+}
+@media(max-width:400px){
+  #event_friend_tabs{
+    padding: 0px;
+  }
+}
+#btn_confirm_edit_profile,
+#btn_cancel_edit_profile{
+  width: 120px;
 }
 
 #input_city, 
