--- a/public/css/app.css
+++ b/public/css/app.css
@@ -105,6 +105,34 @@ div#jumbotron_admin{
   padding: 2rem 0;
 }
 
+.fileContainer {
+  overflow: hidden;
+  position: relative;
+  font-size: 18px;
+  font-weight: bold;
+  width: 127px !important;
+  height: 36px !important;
+  background: #444;
+  border-color: #444; 
+  text-align: center;
+  border-radius:5px;
+  padding: .2em;
+}
+
+.fileContainer [type=file] {
+  cursor: inherit;
+  display: block;
+  filter: alpha(opacity=0);
+  min-height: 100%;
+  min-width: 100%;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+}
+
+
 figure {
   display: block;
   height: 150px;
@@ -155,9 +183,13 @@ figure-details {
   display: block;
   position: relative;
   height: 240px;
-  width: 400px;
   margin-bottom: 14px;
   overflow: hidden;
+}
+@media(max-width:991px) {
+  .content-lg {
+    max-width: 400px;
+  }
 }
 
 .content-overlay {
