--- a/public/css/app.css
+++ b/public/css/app.css
@@ -133,6 +133,7 @@ div#jumbotron_admin{
   padding: .2em;
 }
 
+
 .fileContainer [type=file] {
   cursor: inherit;
   display: block;
@@ -144,6 +145,43 @@ div#jumbotron_admin{
   right: 0;
   top: 0;
   cursor: pointer;
+}
+
+.imageContainer {
+  overflow: hidden;
+  position: relative;
+  font-weight: bold;
+  width: 127px !important;
+  height: 36px !important;
+  background: #444;
+  border-color: #444; 
+  text-align: center;
+  border-radius:5px;
+  padding: .4em;
+}
+.imageContainer [type=file] {
+  cursor: inherit;
+  display: block;
+  filter: alpha(opacity=0);
+  min-height: 100%;
+  min-width: 100%;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+}
+
+.images_uploaded{
+  width: 100px;
+  border: none;
+  margin: 5px 5px; 
+}
+
+.jumbotron_image{
+  max-height: 210px;
+  background: #303030; 
+  overflow-y: scroll;
 }
 
 figure {
