--- a/public/css/app.css
+++ b/public/css/app.css
@@ -547,43 +547,36 @@ h1 {
   position: relative;
   display: inline-block;
   cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-/* The actual popup (appears on top) */
+/* The actual popup */
 
 .popup .popuptext {
   visibility: hidden;
+  width: 420px;
+  height: 240px;
   background-color: #555;
   color: #fff;
-  text-align: center;
+  text-align: left;
   border-radius: 6px;
-  padding: 8px 0;
+  padding: 6px 6px;
   position: absolute;
   z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-bottom: 30px;
-}
-
-/* Popup arrow */
-
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
   top: 100%;
   left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
+  margin-left: -80px;
 }
 
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
+/* Toggle this class - hide and show the popup */
 
 .popup .show {
   visibility: visible;
   -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s
+  animation: fadeIn 1s;
 }
 
 /* Add animation (fade in the popup) */
