--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,6 +56,7 @@ select.custom-select {
   border: 1px solid #444;
   border-radius: 0px 5px 5px 0px;
 }
+input[type="text"].search,
 textarea.form-control{
   color: white;
   background-color: #444;
@@ -151,7 +152,6 @@ div#jumbotron_admin{
 .imageContainer {
   overflow: hidden;
   position: relative;
-  font-weight: bold;
   width: 127px !important;
   height: 36px !important;
   background: #444;
